autospy_macro/src/snapshots/autospy_macro__generate__tests__arguments_marked_with_cfg_test_with_attribute_are_captured_with_that_expression.snap
---
source: autospy_macro/src/generate.rs
expression: "generate_pretty(parse_quote!\n{\n    trait MyTrait\n    {\n        fn\n        function(&self,\n        #[cfg_attr(test,\n        autospy(into=\"Result<String,Utf8Error>\", with=\"String::from_utf8\"))]\n        bytes: Vec<u8>,);\n    }\n})"
---
trait MyTrait {
    fn function(&self, bytes: Vec<u8>);
}
#[cfg(test)]
#[derive(Clone)]
struct MyTraitSpy {
    pub function: autospy::SpyFunction<Result<String, Utf8Error>, ()>,
}
#[cfg(test)]
impl Default for MyTraitSpy {
    fn default() -> Self {
        Self {
            function: autospy::SpyFunction::from("function"),
        }
    }
}
#[cfg(test)]
impl MyTrait for MyTraitSpy {
    #[track_caller]
    fn function(&self, bytes: Vec<u8>) {
        self.function.spy(String::from_utf8(bytes))
    }
}
