autospy_macro/src/snapshots/autospy_macro__generate__tests__arguments_marked_with_into_attribute_are_captured.snap
---
source: autospy_macro/src/generate.rs
assertion_line: 44
expression: "generate_pretty(quote!\n{\n    trait MyTrait { fn function(&self, #[autospy(into=IpAddr)] ip: [u8; 4]); }\n})"
---
trait MyTrait {
    fn function(&self, ip: [u8; 4]);
}
#[derive(Default, Clone)]
struct MyTraitSpy {
    pub function: autospy::SpyFunction<IpAddr, ()>,
}
impl MyTrait for MyTraitSpy {
    fn function(&self, ip: [u8; 4]) {
        self.function.spy(ip.into())
    }
}
