autospy_macro/src/snapshots/autospy_macro__generate__tests__function_with_non_void_return_type.snap
---
source: autospy_macro/src/generate.rs
expression: "generate_pretty(parse_quote!\n{ trait TestTrait { fn function(&self) -> bool; } })"
---
trait TestTrait {
    fn function(&self) -> bool;
}
#[cfg(test)]
#[derive(Clone)]
struct TestTraitSpy {
    pub function: autospy::SpyFunction<(), bool>,
}
#[cfg(test)]
impl Default for TestTraitSpy {
    fn default() -> Self {
        Self {
            function: autospy::SpyFunction::from("function"),
        }
    }
}
#[cfg(test)]
impl TestTrait for TestTraitSpy {
    #[track_caller]
    fn function(&self) -> bool {
        self.function.spy(())
    }
}
