autospy_macro/src/snapshots/autospy_macro__generate__tests__method_with_single_borrowed_argument_has_coverted_to_owned_type_in_spy.snap
---
source: autospy_macro/src/generate.rs
expression: "generate_pretty(quote!\n{ trait TestTrait { fn function(&self, argument: &str); } })"
---
trait TestTrait {
    fn function(&self, argument: &str);
}
#[derive(Default, Clone)]
struct TestTraitSpy {
    pub function: autospy::SpyFunction<<str as ToOwned>::Owned, ()>,
}
impl TestTrait for TestTraitSpy {
    fn function(&self, argument: &str) {
        self.function.spy((argument).to_owned())
    }
}
