autospy_macro/src/snapshots/autospy_macro__generate__tests__multiple_nested_references_on_argument_still_converted_to_owned_type_in_spy.snap
---
source: autospy_macro/src/generate.rs
expression: "generate_pretty(quote!\n{ trait TestTrait { fn function(&self, argument: &&&str); } })"
---
trait TestTrait {
    fn function(&self, argument: &&&str);
}
#[derive(Default, Clone)]
struct TestTraitSpy {
    pub function: autospy::SpyFunction<<str as ToOwned>::Owned, ()>,
}
impl TestTrait for TestTraitSpy {
    fn function(&self, argument: &&&str) {
        self.function.spy((**argument).to_owned())
    }
}
