autospy_macro/src/snapshots/autospy_macro__generate__tests__multiple_owned_arguments_moved_in_spy.snap
---
source: autospy_macro/src/generate.rs
expression: "generate_pretty(quote!\n{\n    trait TestTrait\n    { fn function(&self, argument1: String, argument2: String); }\n})"
---
trait TestTrait {
    fn function(&self, argument1: String, argument2: String);
}
#[derive(Default, Clone)]
struct TestTraitSpy {
    pub function: autospy::SpyFunction<
        (<String as ToOwned>::Owned, <String as ToOwned>::Owned),
        (),
    >,
}
impl TestTrait for TestTraitSpy {
    fn function(&self, argument1: String, argument2: String) {
        self.function.spy((argument1.to_owned(), argument2.to_owned()))
    }
}
