autospy_macro/src/snapshots/autospy_macro__generate__tests__single_method_with_no_arguments.snap
---
source: autospy_macro/src/generate.rs
expression: "generate_pretty(quote! { trait TestTrait { fn function(&self); } })"
---
trait TestTrait {
    fn function(&self);
}
#[derive(Default, Clone)]
struct TestTraitSpy {
    pub function: autospy::SpyFunction<(), ()>,
}
impl TestTrait for TestTraitSpy {
    fn function(&self) {
        self.function.spy(())
    }
}
